# neural-network-from-scratch

./: .editorconfig  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: main.rs  utils.rs
src/datasets/: mnist.rs
src/neural_networks/: basic.rs  mlp.rs  mod.rs
