[package]
name = "neural-network-from-scratch"
version = "0.1.0"
authors = ["Mohammad Rahhal"]
edition = "2021"

[dependencies]
byteorder = "1.4.3"
maplit = "1.0.2"
nalgebra = "0.31.4"
once_cell = "1.13.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.16.0"
